[gd_scene load_steps=10 format=4 uid="uid://cdxsd1dj1t4ts"]

[ext_resource type="Script" path="res://components/level.gd" id="1_ma27g"]
[ext_resource type="Texture2D" uid="uid://cauje132ddol5" path="res://sprites/tileset.png" id="1_qm21c"]
[ext_resource type="PackedScene" uid="uid://d23otk3rpyqox" path="res://components/TypeManager.tscn" id="2_fpxku"]
[ext_resource type="PackedScene" uid="uid://t1duqesc3ajv" path="res://components/player.tscn" id="3_q6nhg"]
[ext_resource type="Script" path="res://scripts/finish_line.gd" id="5_fi20k"]
[ext_resource type="PackedScene" uid="uid://c548i0e4ftakl" path="res://components/enemy.tscn" id="6_i7ie0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s7uga"]
texture = ExtResource("1_qm21c")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
5:4/0 = 0

[sub_resource type="TileSet" id="TileSet_c81ks"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_s7uga")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uq3se"]
size = Vector2(38, 349)

[node name="Level1" type="Node2D"]
process_mode = 3
script = ExtResource("1_ma27g")
enemy_timer = 0.9
range_enemy = 0.2

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASAAEAAAABAAEAAAASAAwAAAAAAAIAABASAAsAAAABAAEAAAASAAoAAAABAAEAAAASAAkAAAABAAEAAAASAAgAAAABAAEAAAASAAcAAAABAAEAAAASAAYAAAABAAEAAAASAAUAAAABAAEAAAASAAQAAAABAAEAAAASAAMAAAABAAEAAAASAAIAAAABAAEAAAATAAEAAAACAAAAABATAAIAAAACAAEAABATAAMAAAACAAEAABATAAQAAAACAAEAABATAAUAAAACAAEAABATAAYAAAACAAEAABATAAcAAAACAAEAABATAAgAAAACAAEAABATAAoAAAACAAEAABATAAsAAAACAAIAABATAAwAAAAAAAIAABATAAkAAAACAAEAABASAAAAAAAAAAIAADATAAAAAAAAAAIAADAAAAAAAAAAAAIAADAAAAMAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAAAAAAAAAIAADABAAIAAAABAAEAAAABAAcAAAABAAEAAAABAAkAAAABAAEAAAABAAsAAAABAAEAAAACAAEAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAADAAEAAAAAAAEAAAADAAMAAAAAAAEAAAADAAUAAAAAAAAAAAADAAcAAAAAAAEAAAADAAgAAAAAAAEAAAADAAoAAAAAAAEAAAAEAAIAAAAAAAAAAAAEAAQAAAAAAAEAAAAEAAkAAAAAAAEAAAAEAAoAAAAAAAEAAAAEAAwAAAAAAAIAABAFAAEAAAAAAAEAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAgAAAAAAAEAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAEAAAAFAAwAAAAAAAIAABAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAsAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAUAAAAAAAEAAAAHAAoAAAAAAAEAAAAIAAIAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAEAAAAIAAkAAAAAAAEAAAAIAAoAAAAAAAEAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAAAAAAAAAIAADAKAAcAAAAAAAEAAAAKAAgAAAAAAAEAAAALAAAAAAAAAAIAADALAAgAAAAAAAAAAAALAAwAAAAAAAIAABAMAAAAAAAAAAIAADAMAAYAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAoAAAAAAAEAAAAMAAsAAAAAAAEAAAANAAAAAAAAAAIAADANAAIAAAAAAAAAAAANAAQAAAAAAAEAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAAAAAAAAAIAADAOAAEAAAAAAAEAAAAOAAMAAAAAAAEAAAAOAAUAAAAAAAEAAAAOAAYAAAAAAAAAAAAOAAgAAAAAAAEAAAAOAAoAAAAAAAEAAAAOAAsAAAAAAAAAAAAPAAAAAAAAAAIAADAPAAEAAAAAAAAAAAAPAAIAAAAAAAEAAAAPAAQAAAAAAAAAAAAPAAcAAAAAAAAAAAAQAAAAAAAAAAIAADAQAAEAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAIAABARAAEAAAAAAAEAAAARAAIAAAAAAAAAAAARAAMAAAAAAAEAAAARAAcAAAAAAAAAAAARAAoAAAAAAAAAAAARAAwAAAAAAAIAABADAAIAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAsAAAAAAAAAAAAAAAwAAAAAAAIAABABAAEAAAABAAEAAAABAAMAAAABAAEAAAABAAQAAAABAAEAAAABAAUAAAABAAEAAAABAAYAAAABAAEAAAABAAgAAAABAAEAAAABAAoAAAABAAEAAAABAAwAAAAAAAIAABACAAAAAAAAAAIAADACAAIAAAAAAAEAAAACAAYAAAAAAAEAAAACAAcAAAAAAAEAAAACAAgAAAAAAAAAAAACAAkAAAAAAAEAAAACAAoAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAIAABADAAAAAAAAAAIAADADAAQAAAAAAAAAAAADAAYAAAAAAAEAAAADAAkAAAAAAAEAAAADAAsAAAAAAAEAAAADAAwAAAAAAAIAABAEAAAAAAAAAAIAADAEAAEAAAAAAAEAAAAEAAMAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAEAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAsAAAAAAAAAAAAFAAAAAAAAAAIAADAFAAIAAAAAAAAAAAAFAAMAAAAAAAEAAAAFAAYAAAAAAAEAAAAFAAcAAAAAAAEAAAAFAAkAAAAAAAEAAAAGAAAAAAAAAAIAADAGAAEAAAAAAAAAAAAGAAIAAAAAAAEAAAAGAAMAAAAAAAEAAAAGAAQAAAAAAAEAAAAGAAcAAAAAAAEAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAEAAAAGAAoAAAAAAAEAAAAGAAwAAAAAAAIAABAHAAAAAAAAAAIAADAHAAMAAAAAAAEAAAAHAAQAAAAAAAAAAAAHAAYAAAAAAAEAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAEAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAIAABAIAAAAAAAAAAIAADAIAAEAAAAAAAEAAAAIAAMAAAAAAAEAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAIAABAJAAAAAAAAAAIAADAJAAMAAAAAAAEAAAAJAAcAAAAAAAEAAAAJAAgAAAAAAAEAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAEAAAAJAAwAAAAAAAIAABAKAAEAAAAAAAEAAAAKAAIAAAAAAAEAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAEAAAAKAAUAAAAAAAEAAAAKAAYAAAAAAAEAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAEAAAAKAAsAAAAAAAEAAAAKAAwAAAAAAAIAABALAAEAAAAAAAEAAAALAAIAAAAAAAEAAAALAAMAAAAAAAEAAAALAAQAAAAAAAEAAAALAAUAAAAAAAEAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAkAAAAAAAEAAAALAAoAAAAAAAEAAAALAAsAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAEAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAkAAAAAAAEAAAAMAAwAAAAAAAIAABANAAEAAAAAAAAAAAANAAMAAAAAAAAAAAANAAUAAAAAAAEAAAANAAYAAAAAAAAAAAANAAcAAAAAAAEAAAANAAoAAAAAAAEAAAANAAsAAAAAAAAAAAANAAwAAAAAAAIAABAOAAIAAAAAAAAAAAAOAAQAAAAAAAEAAAAOAAcAAAAAAAAAAAAOAAkAAAAAAAEAAAAOAAwAAAAAAAIAABAPAAMAAAAAAAEAAAAPAAUAAAAAAAEAAAAPAAYAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAIAABAQAAIAAAAAAAAAAAAQAAQAAAAAAAEAAAAQAAYAAAAAAAAAAAAQAAgAAAAAAAEAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAEAAAARAAAAAAAAAAIAADARAAQAAAAAAAAAAAARAAUAAAAAAAEAAAARAAYAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAEAAAARAAsAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_c81ks")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TypeManager" parent="CanvasLayer" instance=ExtResource("2_fpxku")]
process_mode = 1
max_keys = 15
metadata/_edit_use_anchors_ = true

[node name="Countdown" type="Label" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.79375
offset_right = 16.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 32
text = "3"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="countdownTimer" type="Timer" parent="CanvasLayer"]

[node name="player" parent="." instance=ExtResource("3_q6nhg")]
position = Vector2(48, 206)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="FinishLine" type="Area2D" parent="."]
position = Vector2(594, 44)
collision_mask = 2
script = ExtResource("5_fi20k")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLine"]
position = Vector2(0, 164.5)
shape = SubResource("RectangleShape2D_uq3se")

[node name="enemy" parent="." instance=ExtResource("6_i7ie0")]
position = Vector2(46, 146)

[node name="enemy2" parent="." instance=ExtResource("6_i7ie0")]
position = Vector2(48, 261)

[connection signal="timeout" from="CanvasLayer/countdownTimer" to="." method="_on_countdown_timer_timeout"]
[connection signal="area_entered" from="FinishLine" to="FinishLine" method="_on_area_entered"]
